--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.25.1)
 
-set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD 20)
 
 project(
   Lamb
@@ -9,7 +9,10 @@ project(
   LANGUAGES CXX
 )
 
+add_library(lamb_warnings INTERFACE)
 include(cmake/CompilerWarnings.cmake)
+set_project_warnings(lamb_warnings)
+
 include(cmake/StaticAnalyzers.cmake)
 
 add_subdirectory(src)
